add contact point

--- a/eddist-server/src/templates/term-of-usage.get.hbs
+++ b/eddist-server/src/templates/term-of-usage.get.hbs
@@ -74,5 +74,7 @@
             本サービスの運営者、もしくは運営者が委託する第三者が運営するサービス、加えていずれの場合も本サービスが使用するドメイン({{domain}})を含むサービス
         </li>
     </ol>
+    <hr />
+    <p>問い合わせ先: {{contact_point}}</p>
 </div>
 </body>
