WIP: Add user page template and service, enhance user registration error handling

--- a/eddist-server/src/templates/user-page-simple.get.hbs
+++ b/eddist-server/src/templates/user-page-simple.get.hbs
@@ -18,6 +18,8 @@
     </style>
 </head>
 <body>
-    <h1>Under construction</h1>
+    <h1>ユーザーページ</h1>
+    <h2>ユーザー名: {{ user_name }}</h2>
+    <h3>Under construction</h3>
 </body>
 </html>
