feat: implement rate limiting for authentication with token

--- a/eddist-server/resources/templates/auth-code.post.failed.hbs
+++ b/eddist-server/resources/templates/auth-code.post.failed.hbs
@@ -36,6 +36,7 @@
                                 <li>認証コードが正しく入力されているか確認してください</li>
                                 <li>認証コードの有効期限が切れていないか確認してください</li>
                                 <li>書き込みを行ってから再度お試しください</li>
+                                <li>うまくいかない場合は、ウェブブラウザ上で書き込みを行ってから認証を試みてください</li>
                             </ul>
                         </div>
                         
