--- a/eddist-server/resources/templates/auth-code.get.hbs
+++ b/eddist-server/resources/templates/auth-code.get.hbs
@@ -16,6 +16,9 @@
         src="https://mcl.spur.us/d/mcl.js?tk={{monocle_site_key}}"
         id="_mcl"></script>
     {{/if}}
+    {{#if cap_site_key}}
+    <script src="https://cdn.jsdelivr.net/npm/@cap.js/widget@0.1.32" defer></script>
+    {{/if}}
 </head>
 <body class="bg-gray-50">
     <div class="min-h-[calc(100vh-1rem)] lg:min-h-[calc(100vh-4rem)] flex flex-col max-w-4xl mx-auto p-4">
@@ -69,7 +72,13 @@
                                 <div class="h-captcha" data-sitekey="{{hcaptcha_site_key}}"></div>
                             </div>
                             {{/if}}
-                            
+                            {{#if cap_site_key}}
+                            <div class="flex justify-center">
+                                <cap-widget id="cap-widget" data-cap-api-endpoint="{{cap_base_url}}/{{cap_site_key}}/"></cap-widget>
+                                <input type="hidden" name="cap-token" id="cap-token-input" value="">
+                            </div>
+                            {{/if}}
+
                             <div class="space-y-2">
                                 <label for="auth-code" class="block text-sm font-medium text-gray-900">認証コード</label>
                                 <input 
@@ -345,6 +354,15 @@
                     alert('利用規約に同意してください。');
                 }
             });
+
+            // Handle Cap widget solve event
+            const capWidget = document.getElementById('cap-widget');
+            const capTokenInput = document.getElementById('cap-token-input');
+            if (capWidget && capTokenInput) {
+                capWidget.addEventListener('solve', function(e) {
+                    capTokenInput.value = e.detail.token;
+                });
+            }
         });
     </script>
 </body>
